--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-<h1>欢迎光临</h1>
+<h1>Bin Wang</h1>
+
+<h3>Education</h3>
+  <p>University of Toronto <br /> 2021.09-2023.04</p>
+<h3>Experience</h3>
+  
+<h3>Wards</h3>
+  
