--- a/index.html
+++ b/index.html
@@ -3,6 +3,22 @@
 <h3>Education</h3>
   <p>University of Toronto <br /> 2021.09-2023.04</p>
 <h3>Experience</h3>
-  
+experience:
+  - title: Visiting Research Student
+    company: Shanghai Jiao Tong University
+    company_url: 'http://en.sjtu.edu.cn/'
+    location: Shanghai
+    date_start: '2020-12-01'
+    date_end: '2021-08-31'
+    description: Supervised by Quanshi Zhang
+    description_url: 'http://qszhang.com/'
+        
+  - title: Undergraduate Student
+    company: University of Toronto
+    company_url: 'https://www.utoronto.ca/'
+    location: Toronto
+    date_start: '2021'
+    date_end: '2023'
+    description: 
 <h3>Wards</h3>
   
