--- a/index.html
+++ b/index.html
@@ -14,11 +14,10 @@ experience:
     description_url: 'http://qszhang.com/'
         
   - title: Undergraduate Student
-    company: University of Toronto
-    company_url: 'https://www.utoronto.ca/'
-    location: Toronto
-    date_start: '2021'
-    date_end: '2023'
-    description: 
+    <p>company:</p> <a href="https://www.utoronto.ca/"> University of Toronto</a>
+    <p>location: Toronto</p>
+    <p>date_start: '2021'</p>
+    <p>date_end: '2023'</p>
+    <p>description:</p>
 <h3>Wards</h3>
   
