--- a/index.html
+++ b/index.html
@@ -2,18 +2,16 @@
 
 <h3>Education</h3>
   <p>University of Toronto <br /> 2021.09-2023.04</p>
-<h3>Experience</h3>
-experience:
-  - title: Visiting Research Student
-    company: Shanghai Jiao Tong University
-    company_url: 'http://en.sjtu.edu.cn/'
+<h2>Experience</h2>
+    <p>title: Visiting Research Student</p>
+    company: <a href="http://en.sjtu.edu.cn/">Shanghai Jiao Tong University</a>
     location: Shanghai
     date_start: '2020-12-01'
     date_end: '2021-08-31'
-    description: Supervised by Quanshi Zhang
-    description_url: 'http://qszhang.com/'
+    <p>description: Supervised by <a href=http://qszhang.com/>Quanshi Zhang</a>
+    
         
-  - title: Undergraduate Student
+ title: Undergraduate Student
     <p>company:</p> <a href="https://www.utoronto.ca/"> University of Toronto</a>
     <p>location: Toronto</p>
     <p>date_start: '2021'</p>
