--- a/index.html
+++ b/index.html
@@ -6,16 +6,14 @@
     <p>title: Visiting Research Student</p>
     company: <a href="http://en.sjtu.edu.cn/">Shanghai Jiao Tong University</a>
     location: Shanghai
-    date_start: '2020-12-01'
-    date_end: '2021-08-31'
+    <a>2020-12-01 to 2021-08-31 </a>
     <p>description: Supervised by <a href=http://qszhang.com/>Quanshi Zhang</a>
     
         
  title: Undergraduate Student
-    <p>company:</p> <a href="https://www.utoronto.ca/"> University of Toronto</a>
-    <p>location: Toronto</p>
-    <p>date_start: '2021'</p>
-    <p>date_end: '2023'</p>
+    <p></p> <a href="https://www.utoronto.ca/"> University of Toronto</a>
+    <p>Toronto</p>
+    <p>2021 to 2023</p>
     <p>description:</p>
 <h3>Wards</h3>
   
