--- a/index.html
+++ b/index.html
@@ -1,19 +1,14 @@
 <h1>Bin Wang</h1>
 
-<h3>Education</h3>
-  <p>University of Toronto <br /> 2021.09-2023.04</p>
+<h2>Education</h2>
+  <p><a href="https://www.utoronto.ca/"> University of Toronto</a> <br /> 2021.09-2023.04</p>
+
 <h2>Experience</h2>
     <p>title: Visiting Research Student</p>
     company: <a href="http://en.sjtu.edu.cn/">Shanghai Jiao Tong University</a>
     location: Shanghai
     <a>2020-12-01 to 2021-08-31 </a>
     <p>description: Supervised by <a href=http://qszhang.com/>Quanshi Zhang</a>
-    
-        
- title: Undergraduate Student
-    <p></p> <a href="https://www.utoronto.ca/"> University of Toronto</a>
-    <p>Toronto</p>
-    <p>2021 to 2023</p>
-    <p>description:</p>
+
 <h3>Wards</h3>
   
