--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 
 <head>
 
-  <title>Yunhe Wang's Homepage</title>
+  <title>Bin Wang's Homepage</title>
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <meta name="description" content="Yunhe Wang is currently a senior researcher at Huawei Noah's Ark Lab">
-  <meta name="keywords" content="Yunhe Wang, 王云鹤, wangyunhe, Yunhe, Wang, Deep Learning, Huawei, PKU, Computer, Vision">
-  <meta name="author" content="Yunhe Wang" />
+  <meta name="description" content="Bin Wang is currently a undergraduate student at University of Toronto">
+  <meta name="keywords" content="Bin Wang, 王彬, wangbin, Bin, Wang, Deep Learning, Facebook, UofT, Computer, Vision">
+  <meta name="author" content="Bin Wang Wang" />
 
   <link rel="stylesheet" href="w3.css">
 
@@ -111,7 +111,7 @@
           I am a senior researcher at <a href="https://www.noahlab.com.hk/">Huawei Noah's Ark Lab</a>, Beijing, where I work on deep learning, model compression, and computer vision, etc. Before that, I did my PhD at school of EECS, <a href="https://www.pku.edu.cn/">Peking University</a>, where I was co-advised by Prof. <a href="https://dblp.org/pers/hd/x/Xu_0006:Chao">Chao Xu</a></a> and Prof. <a href="https://scholar.google.com.sg/citations?user=RwlJNLcAAAAJ">Dacheng Tao</a></a>. I did my bachelors at school of science, <a href="https://en.xidian.edu.cn/">Xidian University</a>.
         </p>
         <p class="w3-center">
-          <a href="mailto:yunhe.wang@huawei.com">Email</a> &nbsp/&nbsp
+          <a href="mailto:binwspacerace.wang@mail.utoronto.ca">Email</a> &nbsp/&nbsp
           <a href="https://scholar.google.com/citations?user=isizOkYAAAAJ">Google Scholar</a> &nbsp/&nbsp
           <a href="https://www.zhihu.com/people/YunheWang"> Zhi Hu </a> &nbsp/&nbsp
           <a href="https://dblp.org/pid/63/8217-1.html"> DBLP </a>
