--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 
 <head>
 
-  <title>Bin Wang's Homepage</title>
+  <title>Yunhe Wang's Homepage</title>
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <meta name="description" content="Bin Wang is currently a undergraduate student at University of Toronto">
-  <meta name="keywords" content="Bin Wang, 王彬, wangbin, Bin, Wang, Deep Learning, Facebook, UofT, Computer, Vision">
-  <meta name="author" content="Bin Wang Wang" />
+  <meta name="description" content="Yunhe Wang is currently a senior researcher at Huawei Noah's Ark Lab">
+  <meta name="keywords" content="Yunhe Wang, 王云鹤, wangyunhe, Yunhe, Wang, Deep Learning, Huawei, PKU, Computer, Vision">
+  <meta name="author" content="Yunhe Wang" />
 
   <link rel="stylesheet" href="w3.css">
 
@@ -70,7 +70,7 @@
     <a href="#award" class="w3-bar-item w3-button">Awards</a>
   </div>
 </nav>
-  
+
 <!-- Top menu on small screens -->
 <header class="w3-bar w3-top w3-hide-large w3-black w3-xlarge">
   <div class="w3-bar-item w3-padding-24">YUNHE</div>
@@ -95,7 +95,7 @@
           I am a senior researcher at <a href="https://www.noahlab.com.hk/">Huawei Noah's Ark Lab</a>, Beijing, where I work on deep learning, model compression, and computer vision, etc. Before that, I did my PhD at school of EECS, <a href="https://www.pku.edu.cn/">Peking University</a>, where I was co-advised by Prof. <a href="https://dblp.org/pers/hd/x/Xu_0006:Chao">Chao Xu</a></a> and Prof. <a href="https://scholar.google.com.sg/citations?user=RwlJNLcAAAAJ">Dacheng Tao</a></a>. I did my bachelors at school of science, <a href="https://en.xidian.edu.cn/">Xidian University</a>.
         </p>
         <p class="w3-center">
-          <a href="mailto:binwspacerace.wang@mail.utoronto.ca">Email</a> &nbsp/&nbsp
+          <a href="mailto:yunhe.wang@huawei.com">Email</a> &nbsp/&nbsp
           <a href="https://scholar.google.com/citations?user=isizOkYAAAAJ">Google Scholar</a> &nbsp/&nbsp
           <a href="https://www.zhihu.com/people/YunheWang"> Zhi Hu </a> &nbsp/&nbsp
           <a href="https://dblp.org/pid/63/8217-1.html"> DBLP </a>
@@ -658,6 +658,11 @@
 
   <div class="w3-light-grey w3-center w3-padding-24">
 
+    Welcome to use this website's <a href="https://github.com/YunheWang/HomePage">source code</a>, just add a link back to here. <a href="https://www.wangyunhe.site/">&#10025;</a></br>
+
+  <!-- Default Statcounter code for Yunhe Wang's Homepage
+  https://www.wangyunhe.site -->
+  No.
   <script type="text/javascript">
   var sc_project=12347113; 
   var sc_invisible=0; 
@@ -666,7 +671,7 @@
   var scJsHost = "https://";
   document.write("<sc"+"ript type='text/javascript' src='" + scJsHost+
   "statcounter.com/counter/counter.js'></"+"script>");
-  </script> Visitor Since Dec 2021. Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-opacity">w3.css</a>
+  </script> Visitor Since Jun 2020. Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-opacity">w3.css</a>
   <noscript>
     <div class="statcounter"><a title="Web Analytics Made Easy -
   StatCounter" href="https://statcounter.com/" target="_blank"><img
