--- a/index.html
+++ b/index.html
@@ -660,25 +660,23 @@
 
     Welcome to use this website's <a href="https://github.com/YunheWang/HomePage">source code</a>, just add a link back to here. <a href="https://www.wangyunhe.site/">&#10025;</a></br>
 
-  <!-- Default Statcounter code for binwspacerace 
+  <!-- Default Statcounter code for binwspacerace
   http://www.binwspacerace.com -->
-  No.
   <script type="text/javascript">
-  var sc_project=12347113; 
+  var sc_project=12692777; 
   var sc_invisible=0; 
   var sc_security="febaf147"; 
-  var sc_https=1; 
   var scJsHost = "https://";
-  document.write("<sc"+"ript type='text/javascript' src='" + scJsHost+
+  document.write("<sc"+"ript type='text/javascript' src='" +
+  scJsHost+
   "statcounter.com/counter/counter.js'></"+"script>");
-  </script> Visitor Since Dec 2020. Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-opacity">w3.css</a>
-  <noscript>
-    <div class="statcounter"><a title="Web Analytics Made Easy -
-  StatCounter" href="https://statcounter.com/" target="_blank"><img
-  class="statcounter" src="https://c.statcounter.com/12692777/0/febaf147/0/"
-  alt="Web Analytics Made Easy - StatCounter">
-      referrerPolicy="no-referrer-when-downgrade"></a></div>
-  </noscript>
+  </script>
+  <noscript><div class="statcounter"><a title="Web Analytics
+  Made Easy - Statcounter" href="https://statcounter.com/"
+  target="_blank"><img class="statcounter"
+  src="https://c.statcounter.com/12692777/0/febaf147/0/"
+  alt="Web Analytics Made Easy - Statcounter"
+  referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
   <!-- End of Statcounter Code -->
   <!-- End page content -->
 </div>
