--- a/index.html
+++ b/index.html
@@ -661,18 +661,18 @@
   <!-- Default Statcounter code for binwspacerace
   http://www.binwspacerace.com -->
   <script type="text/javascript">
-  var sc_project=12347113; 
+  var sc_project=12692777; 
   var sc_invisible=0; 
   var sc_security="febaf147"; 
   var scJsHost = "https://";
   document.write("<sc"+"ript type='text/javascript' src='" +
   scJsHost+
   "statcounter.com/counter/counter.js'></"+"script>");
-  </script>
+  </script> Visitor Since Jun 2020.  
   <noscript><div class="statcounter"><a title="Web Analytics
   Made Easy - Statcounter" href="https://statcounter.com/"
   target="_blank"><img class="statcounter"
-  src="https://c.statcounter.com/12347113/0/febaf147/0/"
+  src="https://c.statcounter.com/12692777/0/febaf147/0/"
   alt="Web Analytics Made Easy - Statcounter"
   referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
   <!-- End of Statcounter Code -->
