--- a/index.html
+++ b/index.html
@@ -668,7 +668,7 @@
   document.write("<sc"+"ript type='text/javascript' src='" +
   scJsHost+
   "statcounter.com/counter/counter.js'></"+"script>");
-  </script> Visitor Since Jun 2020.  
+  </script> visitors  
   <noscript><div class="statcounter"><a title="Web Analytics
   Made Easy - Statcounter" href="https://statcounter.com/"
   target="_blank"><img class="statcounter"
