--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       <img style="width: 80%;max-width: 320px" alt="profile photo" src="images/Yunhe_new.jpg">
       <h1>Bin Wang</h1>
         <p class="w3-justify" style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;max-width:600px">
-          I am a senior researcher at <a href="https://www.noahlab.com.hk/">Huawei Noah's Ark Lab</a>, Beijing, where I work on deep learning, model compression, and computer vision, etc. Before that, I did my PhD at school of EECS, <a href="https://www.pku.edu.cn/">Peking University</a>, where I was co-advised by Prof. <a href="https://dblp.org/pers/hd/x/Xu_0006:Chao">Chao Xu</a></a> and Prof. <a href="https://scholar.google.com.sg/citations?user=RwlJNLcAAAAJ">Dacheng Tao</a></a>. I did my bachelors at school of science, <a href="https://en.xidian.edu.cn/">Xidian University</a>.
+          I am a undergraduate student at <a href="https://www.utoronto.ca/">University of Toronto</a>, where I study on Mathematics, Statictics, and Computer Science.</a>.
         </p>
         <p class="w3-center">
           <a href="mailto:binwspacerace.wang@mail.utoronto.ca">Email</a> &nbsp/&nbsp
@@ -106,6 +106,8 @@
 <!-- The News Section -->
   <div class="w3-container w3-light-grey w3-padding-32" id="news">
    <h2>News</h2>
+   <p><li> Seeking a job as a software engineer</a>.</li></p>
+      <!--
       <p><li> 05/2021, one paper has been accepted by <a href="https://icml.cc/">ICML 2021</a>.</li></p>
       <p><li> 05/2021, I have been selected as a Senior Area Chair for <a href="http://valser.org/">VALSE 2021</a>.</li></p>
       <p><li> 03/2021, I accepted the invitation to serve as an Area Chair for <a href="https://nips.cc/Conferences/2021/">NeurIPS 2021</a>.</li></p>
@@ -117,7 +119,6 @@
       <p><li> 07/2020, one paper has been accepted by <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=5962385">IEEE TNNLS</a>.</li></p>
       <p><li> 07/2020, one paper has been accepted by <a href="https://eccv2020.eu/accepted-papers/">ECCV 2020</a>.</li></p>
       
-      <!--
       <p><li> 06/2020, two papers have been accepted by <a href="https://icml.cc/Conferences/2020/AcceptedPapersInitial">ICML 2020</a>.</li></p>
       <p><li> 07/2020, one paper has been accepted by <a href="http://2020.acmmm.org/accepted-paper-id-list.txt">ACM MM 2020</a>.</li></p>
       <p><li> 02/2020, seven papers have been accepted by <a href="http://openaccess.thecvf.com/menu.py">CVPR 2020</a>.</li></p>
@@ -163,19 +164,23 @@
   </div>
   
   <!-- The Talks Section -->
+  <!-- 
   <div class="w3-container w3-light-grey w3-padding-32" id="talks">
     <h2>Talks</h2>
       <p><li> 06/2020, "<a href="http://valser.org/webinar/slide/slides/20200603/%E6%A8%A1%E5%9E%8B%E5%8E%8B%E7%BC%A9-%E5%B7%A5%E4%B8%9A%E7%95%8C%E5%92%8C%E5%AD%A6%E6%9C%AF%E7%95%8C%E7%9A%84%E5%B7%AE%E5%BC%82.pdf">AI on the Edge - Discussion on the Gap Between Industry and Academia</a>" at <a  href="http://valser.org/"><strong>VALSE</strong></a> Webinar.</li></p>
       <p><li> 05/2020, "<a href="https://www.bilibili.com/video/av925692420/"> Edge AI: Progress and Future Directions</a>" at <a href="https://www.qbitai.com/"> <strong>QbitAI</strong></a> using <a  href="https://www.bilibili.com/"><strong>bilibili</strong></a>.</li></p>
   </div>
+-->
 
  <!-- The Publications Section -->
+ <!-- 
   <div class="w3-container w3-padding-32"" id="publications">
     <h2>Research</h2>
       <p class="w3-left-align" style="line-height:200%">
         I'm interested in devleoping <strong>efficient models</strong> for computer vision (e.g. classification, detection, and super-resolution) using pruning, quantization, distilaltion, NAS, etc.
       </p>
     <h4> Conference Papers:</h4>
+-->
 
  <!--
     <ol>
