--- a/index.html
+++ b/index.html
@@ -94,13 +94,15 @@
       <img style="width: 80%;max-width: 320px" alt="profile photo" src="images/Yunhe_new.jpg">
       <h1>Bin Wang</h1>
         <p class="w3-justify" style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;max-width:600px">
-          I am a undergraduate student at <a href="https://www.utoronto.ca/">University of Toronto</a>, where I study on Mathematics, Statictics, and Computer Science.</a>.
+          I am a undergraduate student at <a href="https://www.utoronto.ca/">University of Toronto</a>, where I study on Mathematics, Statictics, and Computer Science.</a>
         </p>
         <p class="w3-center">
           <a href="mailto:binwspacerace.wang@mail.utoronto.ca">Email</a> &nbsp/&nbsp
-          <a href="https://scholar.google.com/citations?user=isizOkYAAAAJ">Google Scholar</a> &nbsp/&nbsp
+          <a href="https://github.com/BinWSpaceRace">Github</a> &nbsp/&nbsp
           <a href="https://www.linkedin.com/in/binwangcs/"> Linkedin </a> &nbsp/&nbsp
+        <!--
           <a href="https://dblp.org/pid/63/8217-1.html"> DBLP </a>
+        -->
         </p>
         </tbody></table>
   </div>
@@ -137,7 +139,7 @@
   <div class="w3-container w3-padding-32" id="projects">
     <h2>Projects</h2>
     <p class="w3-justify">
-        Actually, model compression is a kind of technique for developing portable deep neural networks with lower memory and computation costs. I have done several projects in Huawei including some smartphones' applications in 2019 and 2020 (e.g. Mate 30 and Honor V30). Currently, I am leading the AdderNet project, which aims to develop a series of deep learning models using only additions (<a href="https://www.reddit.com/r/MachineLearning/comments/ekw2s1/r_addernet_do_we_really_need_multiplications_in/">Discussions on Reddit</a>).
+      I am working on a back-end development project and I hope to become a back-end development programmer. And interested in the direction of virtual reality.
     </p>
 
         <h4><li>Web</li></h4>
@@ -693,8 +695,8 @@
     <h2>Awards</h2>
 <!--  
      <p><li> 2020, <a href="https://mp.weixin.qq.com/s/dORL01lgFNDHgjp3KMJmiQ">Nomination for Outstanding Youth Paper Award</a>, <a href="https://worldaic.com.cn/portal/en/aboutus.html">WAIC</a></p>
-     <p><li> 2016, National Scholarship for Graduate Students</p> 
 -->
+     <p><li> 2016, National Scholarship for Graduate Students</p> 
   </div>  
 
   <div class="w3-light-grey w3-center w3-padding-24">
