--- a/index.html
+++ b/index.html
@@ -699,7 +699,7 @@
 <!--  
      <p><li> 2020, <a href="https://mp.weixin.qq.com/s/dORL01lgFNDHgjp3KMJmiQ">Nomination for Outstanding Youth Paper Award</a>, <a href="https://worldaic.com.cn/portal/en/aboutus.html">WAIC</a></p>
 -->
-     <p><li> 2016, National Scholarship for Graduate Students</p> 
+     <p><li> 2016, National Scholarship for High School Students</p> 
   </div>  
 
   <div class="w3-light-grey w3-center w3-padding-24">
